[package]
name = "fluvio-compression"
version = "0.3.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
categories = ["compression"]
keywords = ["fluvio", "compression"]
repository = "https://github.com/infinyon/fluvio"
description = "Fluvio Compression library"

[features]
default = ["compress"]
compress = [
    "gzip",
    "lz4",
    "snap",
    "zstd"
]
gzip = ["dep:flate2"]
lz4 = ["dep:lz4_flex"]
snap = ["dep:snap"]
zstd = ["dep:zstd"]

[dependencies]
serde = { workspace = true,  features = ['derive'] }
thiserror = { workspace = true }
bytes = { workspace = true }

fluvio-types = { workspace = true }

# Optional Dependencies
flate2 = { workspace = true, optional = true }
lz4_flex = { version = "0.11.1", default-features = false, features = ["safe-decode", "safe-encode", "frame"], optional = true }
snap = { version = "1", optional = true }
zstd = { version = "0.13.0", features = ['wasm'], default-features = false, optional = true }
