[package]
name = "fluvio-connector-common"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Fluvio Contributors <team@fluvio.io>"]
repository = "https://github.com/infinyon/fluvio"
description = "Fluvio Connector Common SDK"

[features]
default = []
derive = ["fluvio-connector-derive"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
fluvio-future = { workspace = true, features = ["subscriber"] }
futures = { version = "0.3", default-features = false }
async-trait = { version = "0.1", default-features = false}
async-net = { version = "1.7", default-features = false }
futures-util = { version = "0.3", features = ["sink"], default-features = false }
serde = { version = "1", features = ["derive", "rc"], default-features = false }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }

fluvio = { path = "../fluvio/", features = ["smartengine"]}
fluvio-connector-package = { path = "../fluvio-connector-package/" }
fluvio-connector-derive = { path = "../fluvio-connector-derive/", optional = true}
fluvio-sc-schema = { path = "../fluvio-sc-schema/"}
fluvio-smartengine = { path = "../fluvio-smartengine/", default-features = false, features = [
    "transformation",
] }

[dev-dependencies]
tempfile = { version = "3.3" }
