[package]
name = "fluvio-connector-common"
description = "Fluvio Connector Common SDK"
version = "0.0.0"
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
derive = ["fluvio-connector-derive"]

[[test]]
name = "derive-test"
path = "ui-test/mod.rs"
required-features = ["derive"]

[dependencies]
async-trait = { workspace = true }
async-channel = { workspace = true }
ctrlc = { workspace = true, features = ["termination"]}
anyhow = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true , features = ["sink"]}
serde = { workspace = true,  features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

fluvio = { workspace = true, features = ["smartengine"] }
fluvio-future = { workspace = true, features = ["subscriber"] }
fluvio-connector-package = { workspace = true  }
fluvio-connector-derive = { workspace = true, optional = true }
fluvio-sc-schema = { workspace = true }
fluvio-smartengine = { workspace = true , features = [ "transformation", "engine"] }


[dev-dependencies]
trybuild = { version = "1.0" } # default workspace dep is forked and fails for this crate
serde = { workspace = true, features = ["derive"]}
fluvio = { workspace = true }
