[package]
name = "fluvio-connector-deployer"
description = "Deployer Fluvio Connector"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true



[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context", "env", "wrap_help", "suggestions"], default-features = false }
derive_builder = { workspace = true }
enum-display = { workspace = true }

fluvio-connector-package = { workspace = true  }
